# assignment-q4

./: .env  main.py  pyproject.toml  streamed_app.py
001-ai-agents-first/: 00_swarm.txt  01_uv.txt  README.md
001-ai-agents-first/03_litellm_openai_agents/01_litellm/myproject/: pyproject.toml
001-ai-agents-first/03_litellm_openai_agents/01_litellm/myproject/src/myproject/: hello.py
001-ai-agents-first/03_litellm_openai_agents/02_uv_litellm_chainlit/firstAgent/: pyproject.toml
001-ai-agents-first/03_litellm_openai_agents/03_lite_llm_agent_sdk/: litellm_agents_sdk.ipynb  pyproject.toml
001-ai-agents-first/04_hello_agents/hello agent/asynchello/: pyproject.toml
001-ai-agents-first/04_hello_agents/hello agent/synchello/synchello/: main.py  pyproject.toml
